[package]
name = "beetle-iter"
version = "0.1.0"
edition = "2021"
authors = ["beetle"]
description = "A collection of basic iterators."
license = "MIT"
repository = "https://github.com/Mearkats/beetle_iter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
